--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">cbeeber</string>
+    <string name="app_name">CBeeber</string>
+    <string name="app_description">Today\'s CBeebies Shows</string>
     <string name="main_menu_reload_title">Reload</string>
     <string name="main_menu_favourites_title">Favourites</string>
     <string name="main_menu_help_title">Help</string>
