added a fragment and help activity with back buttons, updated help in menus

--- a/TODO
+++ b/TODO
@@ -1,10 +1,12 @@
-Database implementation,
-
-
 Gestures (including multi-touches),
-
+ - two finger swipe to go to iplayer
 
 Sensors;
+ - turn screen on programme page?
+ - temperature on help screen?
+
+ help screen
+ help fragment
 
 
 chromecast redux pid
