--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="main_menu_reload_title">Reload</string>
     <string name="programme_menu_iplayer_title">Watch in iPlayer</string>
     <string name="programme_menu_favourites_title">Add/Remove Favourite</string>
+    <string name="programme_menu_favourite_add">Add Favourite</string>
+    <string name="programme_menu_favourite_remove">Remove Favourite</string>
+
     <string name="main_menu_help_title">Help</string>
     <string name="help_menu_back">Back</string>
     <string name="main_menu_about_title">About</string>
