made help page scrollable for small devices

--- a/TODO
+++ b/TODO
@@ -1,9 +1,4 @@
-Gestures (including multi-touches),
- - two finger swipe to go to iplayer
-
-
-
-chromecast redux pid
+Chromecast/Redux integration with pids
 
 
 
